Override default browser css to align form correctly

--- a/src/main/resources/static/sass/imports/browser-override.scss
+++ b/src/main/resources/static/sass/imports/browser-override.scss
@@ -1,3 +1,8 @@
 body {
   margin: 0;
 }
+
+input {
+  padding: 0;
+  margin: 0;
+}
